starting to fix gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+frontend/src/components/DiscordOAuthURL.jsx
 node_modules
 .env
 zsetup_cmd.txt
@@ -26,3 +27,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
