--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/frontend/src/components/DiscordOAuthURL.jsx
 frontend/src/components/DiscordOAuthURL.jsx
 node_modules
 .env
@@ -27,4 +28,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
 
