--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ frontend/src/components/DiscordOAuthURL.jsx
 node_modules
 .env
 zsetup_cmd.txt
+.archived/*
+
 
 # Logs
 logs
@@ -28,5 +30,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
 
 
